Fix download of remote URLs.

By downloading to a temporary file, file_copy must set to overwrite the
existing (temporary) file. Otherwise, it performs a safety abort. Since
the temporary file is ensured to be just created and not contain any
data, it can safely be overwritten.

BUG: 357624